# cookiecutter-rust-aoc

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: Cargo.toml
{{cookiecutter.project_slug}}/src/days/: d01p1.rs
